# neuronotes

./: .gitignore  README.md  package.json  svelte.config.js  vite.config.js  wrangler.toml
_functions/: .config.json
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: db.rs  main.rs
src/lib/: backup.ts  browser_db.ts  db.ts  db_migration.ts  db_types.ts  sqlite.ts  tauri_db.ts
src/lib/components/: BackupModal.svelte  CalendarPanel.svelte  EditPanelsModal.svelte  KanbanPanel.svelte  LoginModal.svelte  NavigationBar.svelte  NotesPanel.svelte  PreferencesModal.svelte  SignupModal.svelte  Spreadsheet.svelte  Spreadsheet.svelte.save  WorkspaceModal.svelte
src/lib/supabase/: auth.ts  client.ts  migrations.ts  storage.ts  sync.ts  types.ts
src/lib/tauri-stubs/: api.ts  plugin-fs.ts  plugin-sql.ts
src/lib/utils/: dateHelpers.ts  debounce.ts  image.ts  security.ts  textFormatting.ts  uuid.ts
src/routes/: +page.svelte  +page.svelte.save
supabase/migrations/: 001_initial_schema.sql  002_fix_search_path.sql  003_optimize_rls_policies.sql  004_remove_unused_index.sql  005_note_images_storage.sql  006_enable_realtime.sql
