[package]
name = "app"
version = "0.2.0"
description = "A Tauri App"
authors = ["feel"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "app_lib"
# crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde_json = "1.0"
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = { version = "2.4", features = [] }
log = "0.4"
tauri-plugin-log = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
#trim-paths = "all"
